# cliteral

./: CMakeLists.txt  CSTR_dump.cpp  CSTR_dump.h  CSTR_dump_detail.h  CSTR_dump_tests.cpp  CSTR_parse.cpp  CSTR_parse.h  CSTR_parse_detail.h  CSTR_parse_tests.cpp  README.md  README.txt  README_ja.md  README_ja.txt  cliteral.cpp  cliteral_res.rc  mstr.h  resource.h  utfio.cpp  utfio.h  utfio_classes.h  utfio_tests.cpp
data/: a_2_a_output.txt  a_2_u16_output.txt  a_2_u16be_output.txt  a_2_u8_output.txt  u16_2_u16_output.txt  u16_2_u8_output.txt  u16_input.txt  u16be_input.txt  u8_2_u16be_output.txt  u8_input.txt
lang/: en_US.rc  ja_JP.rc
